# gommage

./: .env.example  .gitignore  README.md  docker-compose.yml  evaluation_report.tex  explainability_layer.tex  jira_task_payload.json  main.py  pyproject.toml  requirements.txt  technical_spec.tex
agent/: confluence_audit_agent.py  demo_board_traces.py  jira_triage_agent.py
agent/tools/: db_tool.py  email_tool.py  jira_tools.py  slack_tool.py
docs/: adapters_guide.md  aer_dag_neo4j_plan.md  brainstorm.md  demo_script.md  implementation_plan.md  project_status.md
evaluation/: eval_runner.py
evaluation/metrics/: mock_recall.py  replay_fidelity.py
recorder/: env_loader.py
recorder/adapters/: __init__.py  base.py  function_adapter.py  langchain_adapter.py  langgraph_adapter.py  mcp_adapter.py  replay_adapter.py
recorder/proxy/: llm_proxy.py  mock_registry.py  openai_client.py  tool_proxy.py
recorder/serializer/: aer_schema.py  evidence_chain.py  step_snapshot.py
recorder/storage/: jira_attachment.py  local_store.py
replay/engine/: divergence_tracker.py  neo4j_ingester.py  replay_runner.py  sandbox_overlay.py  step_editor.py
replay/ui/: fix_issue_brief.py  server.py
replay/ui/assets/: styles.css
replay/ui/forge/: .gitignore  README.md  manifest.yml  package-lock.json  package.json
replay/ui/jira_panel/: DiffViewer.jsx  MockBadge.jsx  (+3 more)
tests/: generate_test_traces.py  test_aer_schema.py  test_env_loader.py  test_fix_issue_brief.py  test_langchain_integration.py  test_langgraph_integration.py  test_live_agent.py  test_proxy.py  test_replay.py
(+11 files in other folders)
